# Re_Aria2

./: .gitignore  README.md  WHITEPAPER.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
LOKI TOOLS/Aria Forge/: README.md  WHITEPAPER.md  index.html  package-lock.json  package.json  test_onion.sh  tsconfig.json
LOKI TOOLS/Aria Forge/src/: App.svelte  main.ts  styles.css
LOKI TOOLS/Aria Forge/src-tauri/: Cargo.toml  tauri.conf.json
LOKI TOOLS/Aria Forge/src-tauri/capabilities/: default.json
LOKI TOOLS/Aria Forge/src-tauri/icons/: icon.icns
LOKI TOOLS/Aria Forge/src-tauri/src/: downloader.rs  lib.rs  main.rs
src/: App.css  App.svelte  App.tsx  index.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: downloader.rs  lib.rs  main.rs
