[package]
name = "aria_forge"
version = "0.5.1"
description = "Aria Forge desktop client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aria_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "socks", "json"] }
url = "2.5.0"
anyhow = "1.0.75"
bytes = "1.5"
futures = "0.3"
arti-client = "0.39.0"
sha2 = "0.10"
hex = "0.4"
tauri-plugin-dialog = "2.6.0"
